--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,21 +5,21 @@ stages
 {
  stage('Non-parallel stage ')
  {
- agent {label "master"}
+ agent {label "Master"}
  steps { git 'https://github.com/johnnytham/pipeline_1.git' }
  }
  stage('Build')
  {
- agent {label "master"}
+ agent {label "Master"}
  steps {bat 'testing.bat' }
  }
  stage('Run in parallel')
  {
  parallel
  {
- stage('Test1 on master')
+ stage('Test1 on Master')
  {
- agent {label "master"}
+ agent {label "Master"}
  steps {bat'testing.bat' }
  }
  stage('Test2 on slave machine')
@@ -31,7 +31,7 @@ stages
  }
  stage('Deploy')
  {
- agent {label "master"}
+ agent {label "Master"}
  steps {bat 'deploying.bat' }
  }
 }
